lib/sequel/extensions/collation/adapters/sqlite_schema.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


module SQLiteSchema
  include Treetop::Runtime

  def root
    @root ||= :create_table
  end

  module CreateTable0
    def comma
      elements[0]
    end

    def table_constraints
      elements[1]
    end
  end

  module CreateTable1
    def create
      elements[0]
    end

    def table
      elements[2]
    end

    def a
      elements[4]
    end

    def left_paren
      elements[5]
    end

    def b
      elements[6]
    end

    def right_paren
      elements[8]
    end
  end

  module CreateTable2
    def qualified_table_name
      a.text_value.strip
    end

    def column_defs
      b
    end
  end

  def _nt_create_table
    start_index = index
    if node_cache[:create_table].has_key?(index)
      cached = node_cache[:create_table][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_create
    s0 << r1
    if r1
      r3 = _nt_temporary
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        r4 = _nt_table
        s0 << r4
        if r4
          r6 = _nt_if_not_exists
          if r6
            r5 = r6
          else
            r5 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r5
          if r5
            r7 = _nt_qualified_table_name
            s0 << r7
            if r7
              r8 = _nt_left_paren
              s0 << r8
              if r8
                r9 = _nt_column_defs
                s0 << r9
                if r9
                  i11, s11 = index, []
                  r12 = _nt_comma
                  s11 << r12
                  if r12
                    r13 = _nt_table_constraints
                    s11 << r13
                  end
                  if s11.last
                    r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                    r11.extend(CreateTable0)
                  else
                    @index = i11
                    r11 = nil
                  end
                  if r11
                    r10 = r11
                  else
                    r10 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r10
                  if r10
                    r14 = _nt_right_paren
                    s0 << r14
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(CreateTable1)
      r0.extend(CreateTable2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:create_table][start_index] = r0

    r0
  end

  def _nt_whitespace
    start_index = index
    if node_cache[:whitespace].has_key?(index)
      cached = node_cache[:whitespace][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    if has_terminal?('\G[ \\r\\n\\t]', true, index)
      r0 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      r0 = nil
    end

    node_cache[:whitespace][start_index] = r0

    r0
  end

  module WhitespaceEater0
  end

  def _nt_whitespace_eater
    start_index = index
    if node_cache[:whitespace_eater].has_key?(index)
      cached = node_cache[:whitespace_eater][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i1, s1 = index, []
    i2 = index
    r3 = _nt_whitespace
    if r3
      @index = i2
      r2 = instantiate_node(SyntaxNode,input, index...index)
    else
      r2 = nil
    end
    s1 << r2
    if r2
      s4, i4 = [], index
      loop do
        r5 = _nt_whitespace
        if r5
          s4 << r5
        else
          break
        end
      end
      if s4.empty?
        @index = i4
        r4 = nil
      else
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
      end
      s1 << r4
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(WhitespaceEater0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      r0 = instantiate_node(SyntaxNode,input, index...index)
    end

    node_cache[:whitespace_eater][start_index] = r0

    r0
  end

  module Boundary0
  end

  module Boundary1
    def whitespace_eater
      elements[1]
    end
  end

  def _nt_boundary
    start_index = index
    if node_cache[:boundary].has_key?(index)
      cached = node_cache[:boundary][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    i2, s2 = index, []
    i3 = index
    i4 = index
    r5 = _nt_whitespace
    if r5
      r4 = r5
    else
      r6 = _nt_quoted_identifier
      if r6
        r4 = r6
      else
        if has_terminal?(',', false, index)
          r7 = instantiate_node(SyntaxNode,input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure(',')
          r7 = nil
        end
        if r7
          r4 = r7
        else
          if has_terminal?('(', false, index)
            r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure('(')
            r8 = nil
          end
          if r8
            r4 = r8
          else
            if has_terminal?(')', false, index)
              r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure(')')
              r9 = nil
            end
            if r9
              r4 = r9
            else
              @index = i4
              r4 = nil
            end
          end
        end
      end
    end
    if r4
      r3 = nil
    else
      @index = i3
      r3 = instantiate_node(SyntaxNode,input, index...index)
    end
    s2 << r3
    if r3
      if index < input_length
        r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure("any character")
        r10 = nil
      end
      s2 << r10
    end
    if s2.last
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      r2.extend(Boundary0)
    else
      @index = i2
      r2 = nil
    end
    if r2
      r1 = nil
    else
      @index = i1
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r11 = _nt_whitespace_eater
      s0 << r11
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Boundary1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:boundary][start_index] = r0

    r0
  end

  module RightParen0
    def whitespace_eater
      elements[1]
    end
  end

  def _nt_right_paren
    start_index = index
    if node_cache[:right_paren].has_key?(index)
      cached = node_cache[:right_paren][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?(')', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure(')')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_whitespace_eater
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(RightParen0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:right_paren][start_index] = r0

    r0
  end

  module Comma0
    def whitespace_eater
      elements[1]
    end
  end

  def _nt_comma
    start_index = index
    if node_cache[:comma].has_key?(index)
      cached = node_cache[:comma][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?(',', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure(',')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_whitespace_eater
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Comma0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:comma][start_index] = r0

    r0
  end

  module LeftParen0
    def whitespace_eater
      elements[1]
    end
  end

  def _nt_left_paren
    start_index = index
    if node_cache[:left_paren].has_key?(index)
      cached = node_cache[:left_paren][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('(', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('(')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_whitespace_eater
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(LeftParen0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:left_paren][start_index] = r0

    r0
  end

  module QualifiedTableName0
    def database_name
      elements[0]
    end

    def dot
      elements[1]
    end
  end

  module QualifiedTableName1
    def table_name
      elements[1]
    end
  end

  def _nt_qualified_table_name
    start_index = index
    if node_cache[:qualified_table_name].has_key?(index)
      cached = node_cache[:qualified_table_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i2, s2 = index, []
    r3 = _nt_database_name
    s2 << r3
    if r3
      r4 = _nt_dot
      s2 << r4
    end
    if s2.last
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      r2.extend(QualifiedTableName0)
    else
      @index = i2
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r5 = _nt_table_name
      s0 << r5
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(QualifiedTableName1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:qualified_table_name][start_index] = r0

    r0
  end

  def _nt_table_name
    start_index = index
    if node_cache[:table_name].has_key?(index)
      cached = node_cache[:table_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_identifier

    node_cache[:table_name][start_index] = r0

    r0
  end

  def _nt_database_name
    start_index = index
    if node_cache[:database_name].has_key?(index)
      cached = node_cache[:database_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_identifier

    node_cache[:database_name][start_index] = r0

    r0
  end

  def _nt_column_name
    start_index = index
    if node_cache[:column_name].has_key?(index)
      cached = node_cache[:column_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    r0 = _nt_identifier

    node_cache[:column_name][start_index] = r0

    r0
  end

  module QualifiedColumnName0
    def column_name
      elements[1]
    end
  end

  def _nt_qualified_column_name
    start_index = index
    if node_cache[:qualified_column_name].has_key?(index)
      cached = node_cache[:qualified_column_name][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_qualified_table_name
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r3 = _nt_column_name
      s0 << r3
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(QualifiedColumnName0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:qualified_column_name][start_index] = r0

    r0
  end

  module Dot0
    def boundary
      elements[1]
    end
  end

  def _nt_dot
    start_index = index
    if node_cache[:dot].has_key?(index)
      cached = node_cache[:dot][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('.', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('.')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Dot0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:dot][start_index] = r0

    r0
  end

  module Create0
    def boundary
      elements[1]
    end
  end

  def _nt_create
    start_index = index
    if node_cache[:create].has_key?(index)
      cached = node_cache[:create][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('CREATE', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('CREATE')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Create0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:create][start_index] = r0

    r0
  end

  module Temporary0
    def boundary
      elements[1]
    end
  end

  def _nt_temporary
    start_index = index
    if node_cache[:temporary].has_key?(index)
      cached = node_cache[:temporary][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('TEMPORARY', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 9))
      @index += 9
    else
      terminal_parse_failure('TEMPORARY')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('TEMP', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 4))
        @index += 4
      else
        terminal_parse_failure('TEMP')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      r4 = _nt_boundary
      s0 << r4
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Temporary0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:temporary][start_index] = r0

    r0
  end

  module Table0
    def boundary
      elements[1]
    end
  end

  def _nt_table
    start_index = index
    if node_cache[:table].has_key?(index)
      cached = node_cache[:table][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('TABLE', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 5))
      @index += 5
    else
      terminal_parse_failure('TABLE')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Table0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:table][start_index] = r0

    r0
  end

  module If0
    def boundary
      elements[1]
    end
  end

  def _nt_if
    start_index = index
    if node_cache[:if].has_key?(index)
      cached = node_cache[:if][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('IF', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 2))
      @index += 2
    else
      terminal_parse_failure('IF')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(If0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:if][start_index] = r0

    r0
  end

  module Not0
    def boundary
      elements[1]
    end
  end

  def _nt_not
    start_index = index
    if node_cache[:not].has_key?(index)
      cached = node_cache[:not][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('NOT', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('NOT')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Not0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:not][start_index] = r0

    r0
  end

  module Exists0
    def boundary
      elements[1]
    end
  end

  def _nt_exists
    start_index = index
    if node_cache[:exists].has_key?(index)
      cached = node_cache[:exists][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('EXISTS', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('EXISTS')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Exists0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:exists][start_index] = r0

    r0
  end

  module Unique0
    def boundary
      elements[1]
    end
  end

  def _nt_unique
    start_index = index
    if node_cache[:unique].has_key?(index)
      cached = node_cache[:unique][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('UNIQUE', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('UNIQUE')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Unique0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:unique][start_index] = r0

    r0
  end

  module Primary0
    def boundary
      elements[1]
    end
  end

  def _nt_primary
    start_index = index
    if node_cache[:primary].has_key?(index)
      cached = node_cache[:primary][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('PRIMARY', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('PRIMARY')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Primary0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:primary][start_index] = r0

    r0
  end

  module Foreign0
    def boundary
      elements[1]
    end
  end

  def _nt_foreign
    start_index = index
    if node_cache[:foreign].has_key?(index)
      cached = node_cache[:foreign][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('FOREIGN', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('FOREIGN')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Foreign0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:foreign][start_index] = r0

    r0
  end

  module Key0
    def boundary
      elements[1]
    end
  end

  def _nt_key
    start_index = index
    if node_cache[:key].has_key?(index)
      cached = node_cache[:key][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('KEY', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('KEY')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Key0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:key][start_index] = r0

    r0
  end

  module Collate0
    def boundary
      elements[1]
    end
  end

  def _nt_collate
    start_index = index
    if node_cache[:collate].has_key?(index)
      cached = node_cache[:collate][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('COLLATE', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('COLLATE')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_boundary
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Collate0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:collate][start_index] = r0

    r0
  end

  module AscDesc0
    def boundary
      elements[1]
    end
  end

  def _nt_asc_desc
    start_index = index
    if node_cache[:asc_desc].has_key?(index)
      cached = node_cache[:asc_desc][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    i1 = index
    if has_terminal?('ASC', false, index)
      r2 = instantiate_node(SyntaxNode,input, index...(index + 3))
      @index += 3
    else
      terminal_parse_failure('ASC')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      if has_terminal?('DESC', false, index)
        r3 = instantiate_node(SyntaxNode,input, index...(index + 4))
        @index += 4
      else
        terminal_parse_failure('DESC')
        r3 = nil
      end
      if r3
        r1 = r3
      else
        @index = i1
        r1 = nil
      end
    end
    s0 << r1
    if r1
      r4 = _nt_boundary
      s0 << r4
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(AscDesc0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:asc_desc][start_index] = r0

    r0
  end

  module Type0
    def boundary
      elements[1]
    end
  end

  def _nt_type
    start_index = index
    if node_cache[:type].has_key?(index)
      cached = node_cache[:type][index]
      if cached
        cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end
